--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  --primary-color: #12ac8e;
+  --primary-color: #071112;;
   --primary-color-dark: #0d846c;
   --primary-color-light: #e9f7f7;
   --secondary-color: #fb923c;
@@ -9,7 +9,7 @@
   --max-width: 1200px;
 }
 
-
+/* #255760; */
 
  /* footer */
 
