style: update donate button background color for improved visibility

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -38,7 +38,7 @@ a{
 .donate-btn {
     border: none;
     outline: none;
-    background-color: #488aec;
+    background-color: #255760;
     color: #eee;
     border-radius: 7px;
     font-weight: 600;
