--- a/client/src/global/global.css
+++ b/client/src/global/global.css
@@ -5,7 +5,7 @@
     --secondary-color: #fb923c;
     --text-dark: #333333;
     --text-light: #767268;
-    --white: #ffffff;
+    --white: #fff;
     --max-width: 1200px;
   }
 
