--- a/client/src/global/global.css
+++ b/client/src/global/global.css
@@ -1,7 +1,8 @@
 .bg-color {
     --primary-color: #12ac8e;
     --primary-color-dark: #0d846c;
-    --primary-color-light: #0f2f36;
+    /* --primary-color-light: #0f2f36; */
+    --primary-color-light: #488585;
     --secondary-color: #fb923c;
     --text-dark: #333333;
     --text-light: #767268;
