--- a/client/src/components/Navbar/nav_bar.css
+++ b/client/src/components/Navbar/nav_bar.css
@@ -42,7 +42,7 @@
     height: 2px;
     bottom: -2px; /* Adjust based on text */
     left: 0;
-    background-color:#41dbf7;
+    background-color: #12ac8e;
     transform: scaleX(1);
     transform-origin: bottom left;
     transition: transform 0.3s ease-out;
