--- a/client/src/components/Header/Banner.css
+++ b/client/src/components/Header/Banner.css
@@ -1,7 +1,7 @@
 .hero-section {
     position: relative;
     /* background-image: url('../../assets/kyusdachurch.jpg'); */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../assets/hero-1.JPG');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../../assets/bg-image.jpeg');
     height: 100vh;
     background-size: cover;
     background-position: center;
