--- a/client/src/components/Gallery/Gallery.css
+++ b/client/src/components/Gallery/Gallery.css
@@ -1,10 +1,5 @@
 .galleryWrap {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    max-width: 620px;
+    max-width: 100%;
     margin: 0 auto;
   }
   
