--- a/server/mail/unsubscribe.ejs
+++ b/server/mail/unsubscribe.ejs
@@ -21,8 +21,11 @@
             text-align: center;
         }
         .header img {
-            width: 100%;
-            border-radius: 8px;
+            width: 50%;
+            max-width: 200px;
+            display: block; 
+            margin: 0 auto; 
+            border-radius: 50%;
         }
         .title-unsubscribe {
             font-size: 24px;
