feat: update styling of newQuiz email template by changing border radius to 12px

--- a/server/mail/newQuiz.ejs
+++ b/server/mail/newQuiz.ejs
@@ -24,7 +24,7 @@
             max-width: 200px;
             display: block; 
             margin: 0 auto; 
-            border-radius: 50%;
+            border-radius: 12px;
         }
         .title {
             text-align: center;
