--- a/client/style.css
+++ b/client/style.css
@@ -188,3 +188,47 @@ a{
     font-weight: 400;
     color: rgb(107,0,62);
 }
+
+.shake {
+    animation: shake 0.5s ease-in-out;
+  }
+  
+  @keyframes shake {
+    0% {
+      transform: translateX(0);
+    }
+  
+    20% {
+      transform: translateX(-2px);
+    }
+  
+    40% {
+      transform: translateX(2px)
+    }
+  
+    60% {
+      transform: translateX(-2px)
+    }
+  
+    80% {
+      transform: translateX(2px);
+    }
+  
+    100% {
+      transform: translateX(0);
+    }
+  }
+  
+/* Remove arrows in input:number */
+/* Chrome, Safari, Edge, Opera */
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
